<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="gameViewModel"
            type="com.example.stonepaperscissors.screens.game.GameViewModel" />
        <variable
            name="gameFragment"
            type="com.example.stonepaperscissors.screens.game.GameFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="92dp"
            android:src="@drawable/rock_paper_scissors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <Button
            android:id="@+id/other_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="92dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_bg_yellow"
            android:padding="20dp"
            android:text="@string/play_with_other"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image"
            android:onClick="@{() -> gameViewModel.startNavigatingToOther()}"/>

        <Button
            android:id="@+id/computer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/button_bg_yellow"
            android:padding="20dp"
            android:text="@string/play_with_computer"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/other_button"
            android:onClick="@{() -> gameViewModel.startNavigatingToComputer()}"/>

        <TextView
            android:id="@+id/instruction_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_the_instruction"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/computer_button"
            android:onClick="@{() -> gameFragment.showInstruction()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>